--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,4 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
   --light-gray: #e7ecea;
   --primary-gray: #c1c7c5;
   --primary-black: #1e1e1e;
@@ -22,24 +9,6 @@
   --x-large-dot-width: calc(100vw / 57 - 9px);
   --large-dot-gap: 3px;
   --x-large-dot-gap: 4px;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  width: 100%;
-  background-color: #414343;
-}
-
-h2,
-p {
-  max-width: 100%;
-}
-
-#app {
-  max-width: 1280px;
-  text-align: center;
 }
 
 .image-container {
@@ -215,12 +184,14 @@ p {
   margin-bottom: 12px;
   letter-spacing: -1px;
   margin-top: 50px;
+  color: #e7ecea;
 }
 
 .hero-section {
   overflow: hidden;
   position: relative;
   background-color: #414343;
+  margin-top: 55px;
 }
 
 .hero-subtitle {
@@ -233,6 +204,7 @@ p {
   padding-right: 16px;
   margin-bottom: 27px;
   margin-top: 0;
+  color: #e7ecea;
 }
 
 .flex {
