--- a/src/style.css
+++ b/src/style.css
@@ -336,6 +336,11 @@
     transition: all 200ms ease-in;
   }
 
+  .hero-section {
+    min-height: 100vh;
+    padding: 25px 50px;
+  }
+
   .hero-section-container {
     display: flex;
     flex-direction: column;
@@ -348,13 +353,13 @@
   .hero-title {
     font-size: 39px;
     line-height: 42px;
-    max-width: 500px;
+    max-width: 550px;
     padding-left: 0px;
     padding-right: 0px;
     position: relative;
     z-index: 100;
     letter-spacing: normal;
-    margin-top: 0;
+    margin-top: 10%;
   }
 
   .hero-subtitle {
@@ -455,8 +460,6 @@
     padding-top: 53px;
     padding-bottom: 53px;
     position: relative;
-    min-height: 100vh;
-    /* height: var(--hero-height); */
   }
 
   .hero-inner-container {
@@ -500,6 +503,7 @@
     margin-top: 0;
     margin-bottom: 26px;
     margin-top: 3rem;
+    max-width: 500px;
   }
 
   .hero-subtitle {
