--- a/src/style.css
+++ b/src/style.css
@@ -551,4 +551,25 @@
   .hero-upper-content {
     margin-top: 15vh;
   }
+
+  .hero-title {
+    font-size: 80px;
+    line-height: 80px;
+    max-width: 800px;
+  }
+
+  .hero-subtitle {
+    font-size: 32px;
+    line-height: 80px;
+    max-width: 600px;
+  }
+
+  .hero-js-copy {
+    font-size: 32px;
+    line-height: 46px;
+  }
+
+  .hero-button {
+    font-size: 28px;
+  }
 }
